Fix performance tuning doc
Auto cherry-pick of existing commit.
orig-pr: Alluxio/alluxio#9386
orig-commit: Alluxio/alluxio@adbf42572bc98c8bfeeb5e7bc60403ec2538b1d8
orig-commit-author: bf8086 <binfeng@alluxio.com>

pr-link: Alluxio/alluxio#9386
change-id: cid-3772fe5575db48fa17c411f32fa5761556f43a1f